--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,6 @@
     <div>tabs标签页</div>
 </body>
 
-<script src="../dist/main.js"></script>
+<!-- <script src="../dist/main.js"></script> -->
 
 </html>
